# lang

./: CMakeLists.txt  README.md  input.txt  main.cpp
Ast/: ast.cpp  ast.h
DataTree/: call.cpp  data_tree.cpp  data_tree.h
ErrorChecker/: error_checker.cpp  error_checker.h
Parser/: parser.cpp  parser.h
TokenPreparer/: preparer.cpp  preparer.h
Tokenizer/: tokenize.cpp  tokenize.h
